# erdos-ant-verification

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  mica.yaml  pyproject.toml
.github/workflows/: ci.yml  paper.yml
docs/: ARCHITECTURE.md  DEVIATION_LOG.md  PAPER_SCIENTIFIC_READINESS_AUDIT.md  PROOF_ORIGIN.md  REMARKS_PDF_REPRODUCTION.md  SOURCE_CODE_ALIGNMENT_AUDIT.md
memory/: openai-erdos-eq22-playbook.md  openai-erdos-eq22.mica.archive.json
paper/: README.md  main.tex  references.bib
paper/sections/: 01_background.tex  02_phase1.tex  03_phase2.tex  04_phase3.tex  05_eq22.tex  06_limits.tex  07_reproducibility.tex  08_acknowledgements.tex
reports/: TRIPLE_INSPECTION_REPORT.md  sidrce_certification.yaml  slop_scan.json  spar_review.py  spar_review_result.json  verification_report.md  verification_result.json
scripts/: fetch_pdfs.py  verify.ps1  verify.py
src/erdos_ant/: __init__.py  algebraic_geometry.py  genus_class_field.py  imaginary_quadratic_lattice.py  sawin_multiquadratic.py  verify.py
tests/: conftest.py  test_algebraic_geometry.py  test_genus_class_field.py  test_imaginary_quadratic_lattice.py  test_sawin_multiquadratic.py
