[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "erdos-ant-verification"
version = "0.1.4"
description = "Independent reproducibility artifact for the OpenAI/Sawin disproof of the Erdos planar unit-distance conjecture."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Flamehaven Labs" },
]
keywords = [
    "erdos",
    "unit-distance",
    "algebraic-number-theory",
    "golod-shafarevich",
    "reproducibility",
    "mathematical-verification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26",
    "mpmath>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "pypdf>=6.0",
]

[project.urls]
Homepage = "https://github.com/flamehaven01/erdos-ant-verification"
Repository = "https://github.com/flamehaven01/erdos-ant-verification"
Issues = "https://github.com/flamehaven01/erdos-ant-verification/issues"

[project.scripts]
erdos-ant-verify = "erdos_ant.verify:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erdos_ant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# SIM108/SIM110: prefer explicit if/else and for-loops over one-line
# ternary/all() in mathematical code where step-by-step reading aids audit.
ignore = ["E501", "SIM108", "SIM110"]
